// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`textInputField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
      >
        <label
          class="uv_17td3g92 uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9ows uv_m4c9ow20 uv_m4c9ow3c"
          for="_r_0_"
        >
          Test
        </label>
        <div
          aria-required="false"
          class="uv_yl1780 uv_yl1781 uv_yl1785 uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u77"
        >
          <div
            class="uv_toi52u0 uv_toi52u1 uv_toi52u2j uv_toi52u31 uv_toi52u5v"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2j uv_toi52u31 uv_toi52u5v"
            >
              <input
                aria-valuemax="23"
                aria-valuemin="0"
                autocomplete="off"
                class="uv_yl1788"
                data-size="large"
                data-testid="hours-input"
                placeholder="00"
                role="spinbutton"
                value=""
              />
              <span
                class="uv_yl178a uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9owo uv_m4c9ow20 uv_m4c9ow3c"
              >
                :
              </span>
            </div>
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2j uv_toi52u31 uv_toi52u5v"
            >
              <input
                aria-valuemax="59"
                aria-valuemin="0"
                autocomplete="off"
                class="uv_yl1788"
                data-size="large"
                data-testid="minutes-input"
                placeholder="00"
                role="spinbutton"
                value=""
              />
              <span
                class="uv_yl178a uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9owo uv_m4c9ow20 uv_m4c9ow3c"
              >
                :
              </span>
            </div>
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2j uv_toi52u31 uv_toi52u5v"
            >
              <input
                aria-valuemax="59"
                aria-valuemin="0"
                autocomplete="off"
                class="uv_yl1788"
                data-size="large"
                data-testid="seconds-input"
                placeholder="00"
                role="spinbutton"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`textInputField > should render correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5d uv_toi52u5v"
      >
        <label
          class="uv_17td3g92 uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9ows uv_m4c9ow20 uv_m4c9ow3c"
          for="_r_4_"
        >
          Test
        </label>
        <div
          aria-required="false"
          class="uv_yl1780 uv_yl1781 uv_yl1785 uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u77"
        >
          <div
            class="uv_toi52u0 uv_toi52u1 uv_toi52u2j uv_toi52u31 uv_toi52u5v"
          >
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2j uv_toi52u31 uv_toi52u5v"
            >
              <input
                aria-valuemax="23"
                aria-valuemin="0"
                autocomplete="off"
                class="uv_yl1788"
                data-size="large"
                data-testid="hours-input"
                placeholder="00"
                role="spinbutton"
                value=""
              />
              <span
                class="uv_yl178a uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9owo uv_m4c9ow20 uv_m4c9ow3c"
              >
                :
              </span>
            </div>
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2j uv_toi52u31 uv_toi52u5v"
            >
              <input
                aria-valuemax="59"
                aria-valuemin="0"
                autocomplete="off"
                class="uv_yl1788"
                data-size="large"
                data-testid="minutes-input"
                placeholder="00"
                role="spinbutton"
                value=""
              />
              <span
                class="uv_yl178a uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow3 uv_m4c9ow5 uv_m4c9ow7 uv_m4c9owe uv_m4c9owk uv_m4c9owm uv_m4c9owo uv_m4c9ow20 uv_m4c9ow3c"
              >
                :
              </span>
            </div>
            <div
              class="uv_toi52u0 uv_toi52u1 uv_toi52u2j uv_toi52u31 uv_toi52u5v"
            >
              <input
                aria-valuemax="59"
                aria-valuemin="0"
                autocomplete="off"
                class="uv_yl1788"
                data-size="large"
                data-testid="seconds-input"
                placeholder="00"
                role="spinbutton"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
